--- a/user-feeds-frontend/src/App.css
+++ b/user-feeds-frontend/src/App.css
@@ -89,3 +89,93 @@
 .dropdown-menu .pull-left {
   left:0;
 }
+
+
+.sidenav {    text-align: left;
+  height: 100%;
+  width: 360px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  border-right: 1px solid darkkhaki;
+  overflow-x: hidden;
+  padding-top: 20px;
+  padding-left: 6%;
+}
+.responsive {
+  width: 80%;
+  height: auto;
+}
+.sidenav-right-work{
+  text-align: center;
+  height: 100%;
+  width: 462px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  
+  border-left: 1px solid darkkhaki;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+.sidenav a {
+  
+  padding: 2px 8px 10px 18px;
+  text-decoration: none;
+  font-size: 19px;
+  cursor: pointer;
+  color:black;
+  display: block;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+}
+
+.hoveritem{
+  display: inline-block;
+  padding: 5px 15px 6px 13px;
+}
+.hoveritem:hover{
+  background-color: rgba(29,161,242,0.1);
+  border-radius: 20px;
+}
+
+
+.sidenav button {
+  margin-left: 9%;
+  height: 48px;
+ width: 70%;
+  text-decoration: black;
+  font-size: 15px;
+  background-color:rgb(29, 161, 242);
+  display: block;
+  border-bottom-left-radius: 9999px;
+    border-bottom-right-radius: 9999px;
+    border-top-left-radius: 9999px;
+    border-top-right-radius: 9999px;
+    border-color: unset;
+}
+.main {
+  margin-left: 360px; /* Same as the width of the sidenav */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+  margin-right: 350px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 23x;}
+}
+
+.icon_pad{
+  color: rgb(29, 161, 242);
+    font-size: 25px;
+    margin-right: 28px;
+}
+.btn-primary:hover {
+  text-decoration: black;
+  font-size: 15px;
+  background-color:rgb(29, 161, 242);
+  display: block;
+}
